--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@langchain/community": "^0.3.45",
     "@langchain/core": "^0.3.57",
+    "@mistralai/mistralai": "^1.7.5",
     "@opentelemetry/api": "^1.9.0",
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.11",
