--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/git-bot"
+NEXT_PUBLIC_RAZORPAY_KEY_ID=your_razorpay_key_id_here
