--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
-    "@clerk/nextjs": "^6.20.0",
+    "@clerk/nextjs": "^6.35.1",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
     "@langchain/community": "^0.3.45",
@@ -76,6 +76,7 @@
     "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
     "p-limit": "^6.2.0",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
