--- a/package.json
+++ b/package.json
@@ -68,18 +68,19 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.6.0",
     "ignore": "^5.3.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.511.0",
-    "next": "^15.2.3",
+    "next": "^15.4.10",
     "next-themes": "^0.4.6",
     "octokit": "^5.0.3",
     "p-limit": "^6.2.0",
     "razorpay": "^2.9.6",
-    "react": "^19.0.0",
+    "react": "^19.2.3",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
     "react-syntax-highlighter": "^15.6.1",
@@ -99,7 +100,7 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "eslint": "^9.23.0",
-    "eslint-config-next": "^15.2.3",
+    "eslint-config-next": "^15.4.10",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
