--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@ai-sdk/google": "^1.2.18",
+    "@ai-sdk/google": "^0.0.55",
+    "@ai-sdk/groq": "1.2.9",
+    "@ai-sdk/openai": "^0.0.60",
     "@clerk/nextjs": "^6.35.1",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.0.1",
@@ -63,7 +65,7 @@
     "@trpc/server": "^11.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@uiw/react-md-editor": "^4.0.7",
-    "ai": "^4.3.16",
+    "ai": "4.3.16",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
